--- a/Pymaceuticals/pymaceuticals_starter.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter.ipynb
@@ -1076,6 +1076,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set graph variable for pandas\n",
     "graph1 = unique_mouse.groupby(\"Drug Regimen\")[\"Timepoint\"].count()"
    ]
   },
@@ -1158,6 +1159,7 @@
     }
    ],
    "source": [
+    "#group the mice by sex\n",
     "mouse_sex = unique_mouse.groupby(\"Sex\")[\"Mouse ID\"].count()\n",
     "mouse_sex"
    ]
@@ -1203,7 +1205,6 @@
    ],
    "source": [
     "# Generate a pie plot showing the distribution of female versus male mice using pyplot\n",
-    "\n",
     "explode=[0,0]\n",
     "plt.pie(mouse_sex, explode=explode, labels=mouse_sex.index,\n",
     "        autopct=\"%1.1f%%\")\n",
@@ -1495,6 +1496,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set dataframes for line graph and scatter plots\n",
     "cap_df = unique_mouse.loc[unique_mouse[\"Drug Regimen\"] == \"Capomulin\"]\n",
     "cap_plot = unique_mouse.loc[unique_mouse[\"Mouse ID\"] == \"l509\",:]"
    ]
@@ -1614,6 +1616,7 @@
     }
    ],
    "source": [
+    "#calculate the line regression\n",
     "line_regress=st.linregress(s_x_axis, s_y_axis)\n",
     "line_regress"
    ]
@@ -1624,6 +1627,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#assign variables to data from line regression calculation\n",
     "slope = 0.9544396890241049\n",
     "intercept = 21.552160532685008"
    ]
